Add a little color

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <aside>
                 <h3>Software Engineer</h3>
-                <p>Lockheed Martin Corporation</p>
+                <p class="lockheed-martin">Lockheed Martin Corporation</p>
                 <p>May 2022 - <b>Present</b></p>
                 <p>
                     At Lockheed Martin I design, build, test, and deploy full-stack applications.
@@ -75,7 +75,7 @@
 
             <aside>
                 <h3>New Hire Mentor</h3>
-                <p>Lockheed Martin Corporation</p>
+                <p class="lockheed-martin">Lockheed Martin Corporation</p>
                 <p>May 2022 - <b>Present</b></p>
                 <p>As a New Hire Mentor, I spent time educating two new employees about Lockheed Martin Corporation.
                     I also ensured that their day-to-day transitions in their current roles went smoothly.
@@ -84,14 +84,14 @@
 
             <aside>
                 <h3>Internal Research and Development</h3>
-                <p>Lockheed Martin Corporation</p>
+                <p class="lockheed-martin">Lockheed Martin Corporation</p>
                 <p>March 2022 - <b>Present</b></p>
                 <p>Innovative, cutting-edge research and development on new Lockheed Martin products.</p>
             </aside>
 
             <aside>
                 <h3>Associate Software Engineer</h3>
-                <p>Lockheed Martin Corporation</p>
+                <p class="lockheed-martin">Lockheed Martin Corporation</p>
                 <p>May 2020 - April 2022</p>
                 <p>
                     At Lockheed Martin I work with a team of engineers building full-stack applications.
@@ -103,7 +103,7 @@
 
             <aside>
                 <h3>New Hire Mentor</h3>
-                <p>Lockheed Martin Corporation</p>
+                <p class="lockheed-martin">Lockheed Martin Corporation</p>
                 <p>May 2021 - September 2021</p>
                 <p>As a New Hire Mentor, I spent time educating two new employees about Lockheed Martin Corporation.
                     I also ensured that their day-to-day transitions in their current roles went smoothly.
@@ -112,7 +112,7 @@
 
             <aside>
                 <h3>New Hire Mentor</h3>
-                <p>Lockheed Martin Corporation</p>
+                <p class="lockheed-martin">Lockheed Martin Corporation</p>
                 <p>May 2020 - September 2020</p>
                 <p>As a New Hire Mentor, I spent time educating a new employee about Lockheed Martin Corporation. I also
                     ensured that their day-to-day transitions in their current roles went smoothly.
