Add curb programming language

--- a/index.html
+++ b/index.html
@@ -172,6 +172,17 @@
             <h2><a href="#technical-and-research-experience">Technical & Research Experience</a></h2>
             <hr>
 
+            <!-- <aside>
+                <h3>Developer</h3>
+                <p>
+                    curb |
+                    <a href="https://github.com/ChristopherBilg/curb" target="_blank">GitHub &nearr;</a>
+                </p>
+                <p>July 2022 - <b>Present</b></p>
+                <p>Curb is a dialect of the functional programming language Lisp. This is my programming language used
+                    for side projects that interest me. View the GitHub Readme for a list of these side projects.</p>
+            </aside> -->
+
             <aside>
                 <h3>Academic Research: M.S.</h3>
                 <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Papers &nearr;</a>
