Update with new table for relevant skills

--- a/index.html
+++ b/index.html
@@ -48,10 +48,41 @@
             <h2><a href="#relevant-skills">Relevant Skills</a></h2>
             <hr>
 
-            <figure>
-                <img id="skills" alt="Image of relevant skills" src="./images/skills.png" width="755">
+            <figure id="skills-image">
+                <img alt="Image of relevant skills" src="./images/skills.png" width="755">
                 <figcaption>Image of relevant skills; as of 2022-05-25</figcaption>
             </figure>
+            <table id="skills-table">
+                <tbody>
+                    <tr>
+                        <td>Agile, Scrum, and Kanban Development Methodologies</td>
+                    </tr>
+                    <tr>
+                        <td>Amazon Web Services (AWS) & Google Cloud Platform (GCP)</td>
+                    </tr>
+                    <tr>
+                        <td>Full-Stack Development & DevSecOps Lifecycle</td>
+                    </tr>
+                    <tr>
+                        <td>JavaScript, TypeScript, Node, Python, Deno</td>
+                    </tr>
+                    <tr>
+                        <td>Rust, Java, C++, C, Go, Lisp</td>
+                    </tr>
+                    <tr>
+                        <td>Jira, Bitbucket, Confluence, Jenkins, GitLab</td>
+                    </tr>
+                    <tr>
+                        <td>CI/CD Pipeline Design & Microservice Architecture</td>
+                    </tr>
+                    <tr>
+                        <td>Ansible, Terraform, Artifactory, Rancher, Docker, Kubernetes</td>
+                    </tr>
+                    <tr>
+                        <td>Grafana, JUnit, Cucumber, Robot Framework, Chef</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <br>
