--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <li><a href="https://github.com/ChristopherBilg" target="_blank">GitHub &nearr;</a></li>
                     <li><a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank">LinkedIn &nearr;</a>
                     </li>
+                    <!-- <li><a href="./Christopher-Bilger-Resume-July-2022.pdf" target="_blank">Resume &nearr;</a></li> -->
                     <li><a href="mailto:christopherbilg@gmail.com" target="_blank">Email &nearr;</a></li>
                 </ul>
             </nav>
