Add safe resume and new 3x3 PB

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="https://github.com/ChristopherBilg" target="_blank">GitHub &nearr;</a></li>
                     <li><a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank">LinkedIn &nearr;</a>
                     </li>
-                    <!-- <li><a href="./Christopher-Bilger-Resume-July-2022.pdf" target="_blank">Resume &nearr;</a></li> -->
+                    <li><a href="./Christopher-Bilger-Resume-May-2022.pdf" target="_blank">Resume &nearr;</a></li>
                     <li><a href="mailto:christopherbilg@gmail.com" target="_blank">Email &nearr;</a></li>
                 </ul>
             </nav>
@@ -284,6 +284,9 @@
                     </tr>
                     <tr>
                         <td colspan="3">3x3 Ao5 PB (Beginner CFOP): 1:15.32</td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">3x3 PB (Beginner CFOP): 48.07</td>
                     </tr>
                 </tbody>
             </table>
