--- a/index.html
+++ b/index.html
@@ -205,6 +205,17 @@
             <hr>
 
             <aside>
+                <h3>Developer (Interpreters, VMs, & Compiler)</h3>
+                <p>
+                    crisp |
+                    <a href="https://github.com/ChristopherBilg/crisp" target="_blank">GitHub &nearr;</a>
+                </p>
+                <p>May 2022 - <b>Present</b></p>
+                <p>Crisp is a dialect of the functional programming language Lisp. This is a highly-experimental
+                    project (i.e. subject to change at any time) for researching language and compiler design.</p>
+            </aside>
+
+            <aside>
                 <h3>Academic Research: M.S.</h3>
                 <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Papers &nearr;</a>
                 <p>August 2020 - August 2022</p>
@@ -212,19 +223,7 @@
             </aside>
 
             <aside>
-                <h3>Developer & Compiler Design Researcher</h3>
-                <p>
-                    crisp |
-                    <a href="https://github.com/ChristopherBilg/crisp" target="_blank">GitHub &nearr;</a> |
-                    <a href="https://chrisbilger.com/crisp/" target="_blank">Website &nearr;</a>
-                </p>
-                <p>May 2022 - June 2022</p>
-                <p>Crisp is a dialect of the functional programming language Lisp. This is a highly-experimental
-                    project (i.e. subject to change at any time) for researching language and compiler design.</p>
-            </aside>
-
-            <aside>
-                <h3>Developer & Network Security Researcher</h3>
+                <h3>Developer & Security Researcher</h3>
                 <p>
                     ri2p |
                     <a href="https://github.com/ChristopherBilg/ri2p" target="_blank">GitHub &nearr;</a> |
