--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <hr>
 
             <aside>
-                <h3>Developer (Interpreters, VMs, & Compiler)</h3>
+                <h3>Developer (Interpreters, VMs, & Compilers)</h3>
                 <p>
                     crisp |
                     <a href="https://github.com/ChristopherBilg/crisp" target="_blank">GitHub &nearr;</a>
