--- a/index.html
+++ b/index.html
@@ -205,21 +205,21 @@
             <hr>
 
             <aside>
+                <h3>Academic Research: M.S.</h3>
+                <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Papers &nearr;</a>
+                <p>August 2020 - August 2022</p>
+                <p>The above hyperlink is a repository containing all of my research papers.</p>
+            </aside>
+
+            <aside>
                 <h3>Developer (Interpreters, VMs, & Compilers)</h3>
                 <p>
                     crisp |
                     <a href="https://github.com/ChristopherBilg/crisp" target="_blank">GitHub &nearr;</a>
                 </p>
-                <p>May 2022 - <b>Present</b></p>
+                <p>May 2022 - June 2022</p>
                 <p>Crisp is a dialect of the functional programming language Lisp. This is a highly-experimental
                     project (i.e. subject to change at any time) for researching language and compiler design.</p>
-            </aside>
-
-            <aside>
-                <h3>Academic Research: M.S.</h3>
-                <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Papers &nearr;</a>
-                <p>August 2020 - August 2022</p>
-                <p>The above hyperlink is a repository containing all of my research papers.</p>
             </aside>
 
             <aside>
@@ -245,7 +245,7 @@
             <hr>
 
             <!-- <p><b>Professional Scrum Master I</b>: Certification obtained through the Scrum.org platform.
-                <em>July 2022 - Forever</em>
+                <a href="#" target="_blank">Certification &nearr;</a><em>July 2022 - Forever</em>
             </p> -->
 
             <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
