--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
             <aside>
                 <h3>Developer (Interpreters, VMs, & Compilers)</h3>
                 <p>
-                    curb |
-                    <a href="https://github.com/ChristopherBilg/curb" target="_blank">GitHub &nearr;</a>
+                    crisp |
+                    <a href="https://github.com/ChristopherBilg/crisp" target="_blank">GitHub &nearr;</a>
                 </p>
                 <p>May 2022 - <b>Present</b></p>
-                <p>Curb is a dialect of the functional programming language Lisp. This is a toy programming
+                <p>Crisp is a dialect of the functional programming language Lisp. This is a toy programming
                     language used for side projects and learning about interpreters and compilers.</p>
             </aside>
 
