Began working on the projects overview webpage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="./Christopher-Bilger-Resume-August-2022.pdf" target="_blank">Resume &nearr;</a></li>
                     <li><a href="mailto:christopherbilg@gmail.com" target="_blank">Email &nearr;</a></li>
                     <li><a href="/blog">Blog</a></li>
-                    <!-- <li><a href="/projects">Projects</a></li> -->
+                    <li><a href="/projects">Projects</a></li>
                 </ul>
             </nav>
         </section>
