--- a/projects/password-generator/index.html
+++ b/projects/password-generator/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Christopher Bilger">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Client-Side Password Generator</title>
+    <title>Client-Only Password Generator</title>
     <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
     <link rel="stylesheet" media="screen" href="../../css/mvp.css">
     <link rel="stylesheet" media="screen" href="../../css/styles.css">
@@ -20,7 +20,7 @@
     </noscript>
 
     <main hidden>
-        <h1>Client-Side Password Generator</h1>
+        <h1>Client-Only Password Generator</h1>
         <br />
 
         <p>No data/information/values/generated passwords/etc. is sent away from your local browser instance.</p>
