--- a/projects/password-generator/index.html
+++ b/projects/password-generator/index.html
@@ -48,16 +48,16 @@
             <br />
 
             <label for="password-length">Password Length</label>
-            <input type="number" id="password-length" name="password-length" value="32" />
+            <input type="number" id="password-length" name="password-length" value="32" min="1" />
             <br />
 
             <label for="password-count">Password Count</label>
-            <input type="number" id="password-count" name="password-count" value="1" />
+            <input type="number" id="password-count" name="password-count" value="1" min="1" />
             <br />
 
             <input type="submit" name="generate-passwords" value="Generate Passwords" />
 
-            <div id="generated-password-list"></div>
+            <ol id="generated-password-list"></ol>
         </form>
     </main>
 
