Fix CSS layout of generated HTML password elements

--- a/projects/password-generator/index.html
+++ b/projects/password-generator/index.html
@@ -102,6 +102,7 @@
 
             for (let _ = 0; _ < passwordCount; _++) {
                 const passwordElement = document.createElement('li');
+                passwordElement.style.overflowWrap = 'anywhere';
                 passwordElement.innerHTML = generatePassword();
 
                 listHTMLElement.appendChild(passwordElement);
