Added future certification for LSWE DQP

--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
             <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
+            <!-- <p><b>Lead Software Engineer Development Qualification Program</b>: This is Lockheed Martin's internal
+                training and qualification program for transitioning "individual contributor" software engineers into a
+                leadership role. <em><b>INSERT START DATE</b> - Forever</em></p> -->
+
             <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
                 verifies my knowledge of developer operations for engineering on Amazon Web Services (AWS). Over a 3-day
                 (24 total hours) training session, I learned about AWS cloud computing services and then passed the
