Added initial web app page for side-notes

--- a/projects/index.html
+++ b/projects/index.html
@@ -39,9 +39,8 @@
 
             <table id="link-table">
                 <tbody>
-                    <tr>
-                        <td><a href="/projects/password-generator">Client-Only Password Generator</a></td>
-                    </tr>
+                    <tr><td><a href="/projects/side-notes">Side Notes (Note-Taking Web App)</a></td></tr>
+                    <tr><td><a href="/projects/password-generator">Client-Only Password Generator</a></td></tr>
                 </tbody>
             </table>
         </section>
