Updated side notes with new yellow-banner

--- a/projects/side-notes/index.html
+++ b/projects/side-notes/index.html
@@ -19,6 +19,8 @@
         Please enable JavaScript in order to use the password generator.
     </noscript>
 
+    <div id="yellow-banner">WORK IN PROGRESS</div>
+
     <main hidden>
         <a href="/projects">Back to Projects List</a>
 
