--- a/projects/index.html
+++ b/projects/index.html
@@ -40,7 +40,7 @@
             <table id="link-table">
                 <tbody>
                     <tr>
-                        <td><a href="/projects/side-notes">Side Notes (Note-taking Web App)</a></td>
+                        <td><a href="/projects/side-notes">Side Notes (Note-Taking Web App)</a></td>
                     </tr>
 
                     <tr>
