--- a/projects/side-notes/index.html
+++ b/projects/side-notes/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Christopher Bilger">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Side Notes (Note-taking Web App)</title>
+    <title>Side Notes (Note-Taking Web App)</title>
     <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
     <link rel="stylesheet" media="screen" href="../../css/mvp.css">
     <link rel="stylesheet" media="screen" href="../../css/styles.css">
@@ -24,7 +24,7 @@
     <main hidden>
         <a href="/projects">Back to Projects List</a>
 
-        <h1>Side Notes (Note-taking Web App)</h1>
+        <h1>Side Notes (Note-Taking Web App)</h1>
 
         <p>
             <b>Side Notes</b> is a minimal, light-weight, todo-style note keeping web application. This web application
