Fixed IRAD because it's still relevant

--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
             </aside>
 
             <aside>
+                <h3>Internal Research and Development</h3>
+                <p class="lockheed-martin">Lockheed Martin Corporation</p>
+                <p>March 2022 - <b>Present</b></p>
+                <p>Innovative, cutting-edge research and development on new Lockheed Martin products.</p>
+            </aside>
+
+            <aside>
                 <h3>New Hire Mentor</h3>
                 <p class="lockheed-martin">Lockheed Martin Corporation</p>
                 <p>May 2022 - September 2022</p>
                 <p>As a New Hire Mentor, I spent time educating two new employees about Lockheed Martin Corporation.
                     I also ensured that their day-to-day transitions in their current roles went smoothly.
                 </p>
-            </aside>
-
-            <aside>
-                <h3>Internal Research and Development</h3>
-                <p class="lockheed-martin">Lockheed Martin Corporation</p>
-                <p>March 2022 - September 2022</p>
-                <p>Innovative, cutting-edge research and development on new Lockheed Martin products.</p>
             </aside>
 
             <aside>
