--- a/index.html
+++ b/index.html
@@ -258,9 +258,12 @@
             <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
-            <!-- <p><b>Lead Software Engineer Development Qualification Program</b>: This is Lockheed Martin's internal
-                training and qualification program for transitioning "individual contributor" software engineers into a
-                leadership role. <em><b>INSERT START DATE</b> - Forever</em></p> -->
+            <!-- <p>
+                <b>Lead Software Engineer Development Qualification Program</b>: Lockheed Martin's internal training and
+                qualification program for transitioning mid-level software engineers into leadership roles allowed me to
+                fine-tune and refine my leadership skills as well as put them to use on engineering teams.
+                <em><b>INSERT START DATE</b> - Forever</em>
+            </p> -->
 
             <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
                 verifies my knowledge of developer operations for engineering on Amazon Web Services (AWS). Over a 3-day
