Added initial file for cube-mate

--- a/projects/password-generator/index.html
+++ b/projects/password-generator/index.html
@@ -24,7 +24,7 @@
 
         <h1>Client-Only Password Generator</h1>
 
-        <p>No data/information/values/generated passwords/etc. is sent away from your local browser instance.</p>
+        <p>No data/information/values/etc. is sent away from your local browser instance.</p>
 
         <h2>Include the following character sets:</h2>
 
