Cleaned up cube-mate and added informative info

--- a/projects/cube-mate/index.html
+++ b/projects/cube-mate/index.html
@@ -30,6 +30,25 @@
             sent away from your local browser instance.
         </p>
 
+        <h2>Learning Methods Implemented as a Tool?</h2>
+
+        <input type="checkbox" disabled="disabled" id="cross-checkbox" value="Cross" checked />
+        <label for="cross-checkbox">Cross</label>
+        <br />
+
+        <input type="checkbox" disabled="disabled" id="f2l-checkbox" value="F2L" />
+        <label for="f2l-checkbox">F2L</label>
+        <br />
+
+        <input type="checkbox" disabled="disabled" id="oll-checkbox" value="OLL" />
+        <label for="oll-checkbox">OLL</label>
+        <br />
+
+        <input type="checkbox" disabled="disabled" id="pll-checkbox" value="PLL" />
+        <label for="pll-checkbox">PLL</label>
+        <br />
+
+        <hr /><br />
         <input type="submit" value="Scramble" onclick="return updateScrambleAndCross();" />
         <h2 id="scramble"></h2>
         <h2 id="cross"></h2>
