Added project ideas and banner

--- a/projects/cube-mate/index.html
+++ b/projects/cube-mate/index.html
@@ -19,6 +19,8 @@
         Please enable JavaScript in order to use the password generator.
     </noscript>
 
+    <div id="yellow-banner">WORK IN PROGRESS</div>
+
     <main hidden>
         <a href="/projects">Back to Projects List</a>
 
@@ -30,7 +32,7 @@
             sent away from your local browser instance.
         </p>
 
-        <h2>Learning Methods Implemented as a Tool?</h2>
+        <h2>Learning Methods Implemented as a Tool:</h2>
 
         <input type="checkbox" disabled="disabled" id="cross-checkbox" value="Cross" checked />
         <label for="cross-checkbox">Cross</label>
@@ -179,8 +181,6 @@
             timerHTMLElement.innerHTML = convertTimeToHumanReadableString(0);
         }
         resetTimer();
-
-        // Timer History (saved/loaded to localStorage)
     </script>
 </body>
 
